fix: overlapping label layout in link type selector

--- a/src/styles/styles.ContentConfigScreen.module.css
+++ b/src/styles/styles.ContentConfigScreen.module.css
@@ -16,6 +16,7 @@
 
 .link-field > * {
     width: 100%;
+    min-width: 0;
     margin: 0;
 }
 .link-field > *:nth-of-type(1){
